Added contact links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
+<!doctype html>
 <html>
+
 <head>
+    <title>Patrick Ecker - Portfolio</title>
 </head>
+
 <body>
-<h1>Hello World!</h1>
+    <header id="header">
+        <h1>Patrick Ecker</h1>
+        <h2></h2>
+        <div class="header-links">
+        <a href="https://github.com/patrickecker/" class="header-link" target="_blank">ICON</a>
+        <a href="https://twitter.com/iampatrickecker" class="header-link" target="_blank">ICON</a>
+        <a href="https://www.linkedin.com/in/patrick-ecker/" class="header-link" target="_blank">ICON</a>
+        <a href="mailto:patrick.s.ecker@gmail.com" class="header-link">ICON</a>
+      </div>
+    </header>
+    <footer>
+    </footer>
 </body>
+
 </html>
