Updated Portfolio and started FE Invitation Challenge
Downloaded files from https://moeminm.github.io and populated text

--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 
 <head>
     <title>Patrick Ecker - Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header id="header">
-        <h1>Patrick Ecker</h1>
-        <h2></h2>
-        <div class="header-links">
-        <a href="https://github.com/patrickecker/" class="header-link" target="_blank">ICON</a>
-        <a href="https://twitter.com/iampatrickecker" class="header-link" target="_blank">ICON</a>
-        <a href="https://www.linkedin.com/in/patrick-ecker/" class="header-link" target="_blank">ICON</a>
-        <a href="mailto:patrick.s.ecker@gmail.com" class="header-link">ICON</a>
-      </div>
+        <nav>
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+              </svg>Patrick Ecker
+              <ul>
+                  <li><a href="#">Front End Challenges</a> </li>
+              </ul>
+        </nav>
     </header>
+    <main>
+        <section>
+            <h2>Front End Challenges</h2>
+            <a href="./front-end-challenges/invitation-challenge/index.html">Invitation</a>
+        </section>
+    </main>
     <footer>
     </footer>
 </body>
