Added Websites Section
Fixed css

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     </header>
     <main>
         <section>
+            <h2>Websites</h2>
+            <a href="https://www.camp17.com">Camp17</a>
+        </section>
+        <section>
             <h2>Front End Challenges</h2>
             <a href="./front-end-challenges/invitation-challenge/index.html">Invitation</a>
         </section>
