Corrected FE Challenges Invitation
Removed all old files for the challenge.
Fixed stylesheet link to index page

--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Patrick Ecker - Portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <header id="header">
-        <nav>
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-              </svg>Patrick Ecker
-              <ul>
-                  <li><a href="#">Front End Challenges</a> </li>
-              </ul>
-        </nav>
+      <nav>
+        <svg
+          width="1em"
+          height="1em"
+          viewBox="0 0 16 16"
+          class="bi bi-person-fill"
+          fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
+          /></svg
+        >Patrick Ecker
+        <ul>
+          <li><a href="#">Front End Challenges</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section>
-            <h2>Websites</h2>
-            <a href="https://www.camp17.com">Camp17</a>
-        </section>
-        <section>
-            <h2>Front End Challenges</h2>
-            <a href="./front-end-challenges/invitation-challenge/index.html">Invitation</a>
-        </section>
+      <section>
+        <h2>Websites</h2>
+        <a href="https://www.camp17.com">Camp17</a>
+      </section>
+      <section>
+        <h2>Front End Challenges</h2>
+        <a href="./front-end-challenges/invitation-challenge/index.html"
+          >Invitation</a
+        >
+      </section>
     </main>
-    <footer>
-    </footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
