--- a/front-end-challenges/invitation-challenge/index.html
+++ b/front-end-challenges/invitation-challenge/index.html
@@ -1,104 +1,324 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/dec8f928d1.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Invitation Challenge</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
+    <title>Invitation</title>
+  </head>
+  <body>
+    <!-- NAVIGATION -->
+    <nav class="navbar navbar-expand-sm navbar-light mb-3">
+      <div class="container">
+        <a href="index.html" class="navbar-brand pr-5">Invitation</a>
 
-<body>
-  <header>
-    <nav>
-      Invitation
-      Features
-      Extension
-      Referral Programs
-      People
-      Login
-      Sign Up
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarCollapse"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Features</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Extension</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a href="#" class="nav-link"
+                >Referral Programs<i class="fas fa-chevron-down pl-2 fa-sm"></i
+              ></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a href="#" class="nav-link"
+                >People<i class="fas fa-chevron-down pl-2 fa-sm"></i
+              ></a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto" id="login">
+            <li class="nav-item">
+              <button class="btn btn-light btn-sm font-weight-bold">
+                Log In
+              </button>
+            </li>
+            <li class="nav-item">
+              <button class="btn btn-dark btn-sm px-5 font-weight-bold">
+                Sign up
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-  </header>
-  <main>
-    <section>
-      The Referral Community.
-      Invitation is the new social network where every one gets rewared.
-      Join, post all your referral links -- collect rewards on auto pilot.
-      Find promo codes
-      Get Started - It's Free
-    </section>
-    <section>
-      airbnb
-      robinhood
-      uber
-      coinbase
-      transferwise
-      26
-    </section>
-    <section>
-      Get Cash Rewards
-      Post
-      Share the referral codes of products you already use and love. It takes 5 minutes to gather them.
-      Earn
-      Get rewarded every time someone uses one of your codes. Everyday thousands of people come here to find invites.
-      Grow
-      Explore more referral programs and promote your page to get more bonuses & discounts.
-      Get Started - It's free.
-    </section>
-    <section>
-      Why don't you post your link here too?
-      List the products you love.
-      Get rewarded.
-      Sign in with Google
-      Explore Features
-    </section>
-    <section>
-      pictures here
-    </section>
-  </main>
-  <footer>
-    <p><strong>Invitation</strong> is the new socal network where everyone gets rewared. Join, post all yout referral links -- collect
-    rewards on auto pilot.</p>
-    <button>Facebook</button>
-    <button>Instagram</button>
-    <button>Twitter</button>
-    
 
-    <ul class="footer__nav">
-      <li><a href="">Explore</a></li>
-      <li><a href="">Programs</a></li>
-      <li><a href="">People</a></li>
-      <li><a href="">Guide</a></li>
-    </ul>
-
-    <ul class="footer__nav">
-      <li><a href="">Me</a></li>
-      <li><a href="">Post a link</a></li>
-      <li><a href="">Sign in</a></li>
-      <li><a href="">Sign Up</a></li>
-    </ul>
-
-    <ul class="footer__nav">
-      <li><a href="">Product</a></li>
-      <li><a href="">Features</a></li>
-      <li><a href="">Extension</a></li>
-      <li><a href="">Earn Credits</a></li>
-      <li><a href="">Invite Friend</a></li>
-      <li><a href="">Help</a></li>
-    </ul>
-
-    <div class="footer__nav">
-      <ul>
-        <li><a href="">Company</a></li>
-        <li><a href="">Job</a></li>
-        <li><a href="">Advertise</a></li>
-      </ul>
+    <!-- SIGNUP -->
+    <div class="container bg-black text-white mb-4 px-5">
+      <div class="row align-items-center">
+        <div class="col-6">
+          <h2 class="font-weight-bold">The Referral Community.</h2>
+          <p class="smaller-text">
+            <span>Invitation</span> is the new social network where everyone
+            gets rewarded. <br />
+            Join, post all yout referral links - collect rewards on auto pilot.
+          </p>
+          <div class="container p-0">
+            <div class="row">
+              <div class="col-7">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text input-group-addon bg-white"
+                      ><i class="fas fa-search pl-1 fa-xs"></i
+                    ></span>
+                  </div>
+                  <input
+                    class="form-control border-left-0 border-right-0"
+                    type="text"
+                    placeholder="Find promo codes"
+                  />
+                  <div class="input-group-append">
+                    <span class="input-group-text input-group-addon bg-white"
+                      ><i class="fas fa-chevron-down pl-1 fa-xs"></i
+                    ></span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-5">
+                <a href="#" class="btn btn-rainbow text-white px-4">
+                  <span class="small">Get Started - It's free.</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="img/hero-image.png" alt="" class="img-fluid signup-image" />
+        </div>
+      </div>
     </div>
 
-    All product names, logos, brands and dogs are property of their respective owners. Feel free to check out our
-    privacy policy and terms of service.
-  </footer>
-</body>
+    <!-- COMPANY LOGOS -->
+    <div class="container company-logos">
+      <div class="row align-items-center">
+        <div class="col">
+          <img src="img/company-1.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col">
+          <img src="img/company-4.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col">
+          <img src="img/company-2.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col">
+          <img src="img/company-3.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col">
+          <img src="img/company-5.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col">
+          <img src="img/company-6.png" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
 
+    <!-- CASH REWARDS -->
+    <div class="container p-0 cash-reward">
+      <div class="row mb-5">
+        <div class="col-3">
+          <img src="img/left-illustration.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col-6 mt-5 px-5">
+          <h3 class="font-weight-bold text-center">Get Cash Rewards 💰</h3>
+          <h6 class="font-weight-bold">
+            <i class="fas fa-check-circle"></i> Post
+          </h6>
+          <p>
+            Share the referral codes of products you already use and love. It
+            takes 5 minutes to gather them.
+          </p>
+          <h6 class="font-weight-bold">
+            <i class="fas fa-check-circle"></i> Earn
+          </h6>
+          <p>
+            Get rewarded every time someone uses one of your codes. Everyday
+            thousands of people come here to find invites.
+          </p>
+          <h6 class="font-weight-bold">
+            <i class="fas fa-check-circle"></i> Grow
+          </h6>
+          <p>
+            Explore <span class="underlined">more referral programs</span> and
+            promote your page to get more bonuses & discounts.
+          </p>
+          <p class="text-center">
+            <a href="#" class="btn btn-rainbow text-white px-4">
+              <span class="small">Get Started - It's free.</span>
+            </a>
+          </p>
+        </div>
+        <div class="col-3">
+          <img src="img/right-illustration.png" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+
+    <!-- POST LINKS -->
+    <div class="container bg-black text-white mb-4 px-5">
+      <div class="row align-items-center">
+        <div class="col-6">
+          <h3 class="font-weight-bold">
+            Why don't you post your links here too?
+          </h3>
+          <p>
+            <i class="fas fa-check-circle"></i> List the products you ❤️ love.
+            <br />
+            <i class="fas fa-check-circle"></i> Get 🎉 rewarded.
+          </p>
+          <a href="#" class="btn btn-light px-4 d-inline mr-2">
+            <span class="icon"></span
+            ><span class="small"> Sign in with Google</span>
+          </a>
+          <a href="#" class="btn btn-rainbow text-white px-4">
+            <span class="small">Explore Features</span>
+          </a>
+        </div>
+        <div class="col-6">
+          <img
+            src="img/signup-image.png"
+            alt=""
+            class="img-fluid post-links-image"
+          />
+        </div>
+      </div>
+    </div>
+
+    <!-- PICTURES -->
+    <div class="container pictures p-0 py-5">
+      <div class="row">
+        <div class="col-3">
+          <img src="img/footer-1.png" alt="" class="img-fluid" />
+          <img src="img/footer-5.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col-3">
+          <img src="img/footer-3.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col-3">
+          <img src="img/footer-2.png" alt="" class="img-fluid" />
+
+          <img src="img/footer-4.png" alt="" class="img-fluid" />
+        </div>
+        <div class="col-3">
+          <img src="img/footer-7.png" alt="" class="img-fluid" />
+          <img src="img/footer-6.png" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+
+    <!-- FOOTER -->
+    <footer class="smaller-text">
+      <div class="container">
+        <div class="row py-4">
+          <div class="col-7">
+            <p class="pt-3 pl-3">
+              Invitation is the new social network where everyone
+              <br />gets rewarded. Join, post all your referral links —
+              <br />collect rewards on auto pilot.
+            </p>
+            <p class="pl-3">
+              <a href="#" class="btn btn-light btn-sm rounded-0"
+                ><i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#" class="btn btn-light btn-sm rounded-0">
+                <i class="fas fa-camera-retro"></i>
+              </a>
+              <a href="#" class="btn btn-light btn-sm rounded-0">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </p>
+          </div>
+          <div class="col-5">
+            <div class="container">
+              <div class="row">
+                <div class="col-3">
+                  <span class="font-weight-bold">Explore</span>
+                  <a href="#" class="text-white">Programs</a>
+                  <br />
+                  <a href="#" class="text-white">People </a>
+                  <br />
+                  <a href="#" class="text-white">Guide </a>
+                </div>
+                <div class="col-3">
+                  <span class="font-weight-bold">Post a link</span>
+                  <a href="#" class="text-white">Sign in</a>
+                  <br />
+                  <a href="#" class="text-white">Sign up</a>
+                </div>
+                <div class="col-3">
+                  <span class="font-weight-bold">Product</span>
+                  <a href="#" class="text-white">Features</a>
+                  <br />
+                  <a href="#" class="text-white">Extension</a>
+                  <br />
+                  <a href="#" class="text-white">Earn Credits</a>
+                  <br />
+                  <a href="#" class="text-white">Invite Friends </a>
+                  <br />
+                  <a href="#" class="text-white">Help</a>
+                </div>
+                <div class="col-3">
+                  <span class="font-weight-bold">Company</span>
+                  <a href="#" class="text-white">Job</a>
+                  <br />
+                  <a href="#" class="text-white">Advertise</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row bg-white pt-2">
+          <div class="col">
+            <p class="text-muted text-center">
+              All product names, logos, brands and dogs are property of their
+              respective owners.Feel free to check out our privacy policy and
+              terms of service.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script
+      src="http://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"
+    ></script>
+
+    <script>
+      // Get the current year for copyright
+      $("#year").text(new Date().getFullYear());
+    </script>
+  </body>
 </html>
