--- a/front-end-challenges/invitation-challenge/index.html
+++ b/front-end-challenges/invitation-challenge/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- NAVIGATION -->
-    <nav class="navbar navbar-expand-sm navbar-light mb-3">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
       <div class="container">
         <a href="index.html" class="navbar-brand pr-5">Invitation</a>
 
