--- a/index.html
+++ b/index.html
@@ -1,43 +1,124 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Patrick Ecker - Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/dec8f928d1.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <header id="header">
-      <nav>
-        <svg
-          width="1em"
-          height="1em"
-          viewBox="0 0 16 16"
-          class="bi bi-person-fill"
-          fill="currentColor"
-          xmlns="http://www.w3.org/2000/svg"
+    <!-- NAVIGATION -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">Patrick Ecker</a>
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarCollapse"
         >
-          <path
-            fill-rule="evenodd"
-            d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
-          /></svg
-        >Patrick Ecker
-        <ul>
-          <li><a href="#">Front End Challenges</a></li>
-        </ul>
-      </nav>
-    </header>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a href="#websites-header" class="nav-link">Websites</a>
+            </li>
+            <li class="nav-item">
+              <a href="#front-end-challenges-header" class="nav-link"
+                >Front End Challenges</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <main>
-      <section>
-        <h2>Websites</h2>
-        <a href="https://www.camp17.com">Camp17</a>
+      <!-- WEBSITES -->
+      <section id="websites-header">
+        <div class="container">
+          <div class="row">
+            <h3 class="display-3">Websites</h3>
+          </div>
+          <div class="row">
+            <div class="col-3">
+              <div class="card">
+                <div class="card-header text-center">Camp17</div>
+                <div class="card-body text-center">
+                  <img src="img/camp17-thumb.png" alt="" class="img-fluid" />
+                  <a href="https://www.camp17.com" class="btn btn-primary"
+                    >Website</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
-      <section>
-        <h2>Front End Challenges</h2>
-        <a href="./front-end-challenges/invitation-challenge/index.html"
-          >Invitation</a
-        >
+
+      <!-- FRONT END CHALLENGES -->
+      <section id="front-end-challenges-header">
+        <div class="container">
+          <div class="row">
+            <h3 class="display-3">Front End Challenges</h3>
+          </div>
+          <div class="row">
+            <div class="col-3">
+              <div class="card text-center">
+                <div class="card-header">Invitation</div>
+                <div class="card-body">
+                  <a href="img/invitation.png"
+                    ><img
+                      src="img/invitation-thumb.png"
+                      alt=""
+                      class="img-fluid"
+                    />
+                    <p class="text-muted">Image</p></a
+                  >
+                  <a
+                    href="./front-end-challenges/invitation-challenge/index.html"
+                    class="btn btn-primary"
+                    >Implementation</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
+
+    <script
+      src="http://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"
+    ></script>
+
+    <script></script>
   </body>
 </html>
