--- a/index.html
+++ b/index.html
@@ -55,11 +55,16 @@
             <h3 class="display-3">Websites</h3>
           </div>
           <div class="row">
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-12">
               <div class="card">
                 <div class="card-header text-center">Camp17</div>
                 <div class="card-body text-center">
-                  <img src="img/camp17-thumb.png" alt="" class="img-fluid" />
+                  <a href="https://www.camp17.com"
+                    ><img
+                      src="img/camp17-thumb.png"
+                      alt=""
+                      class="img-fluid" /></a
+                  ><br />
                   <a href="https://www.camp17.com" class="btn btn-primary"
                     >Website</a
                   >
@@ -77,7 +82,7 @@
             <h3 class="display-3">Front End Challenges</h3>
           </div>
           <div class="row">
-            <div class="col-3">
+            <div class="col-lg-3 col-sm-12">
               <div class="card text-center">
                 <div class="card-header">Invitation</div>
                 <div class="card-body">
