ADDED RESUME LINK

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#" class="nav-link">Resume</a>
+              <a href="http://resume.capedcoder.com" class="nav-link">Resume</a>
             </li>
             <li class="nav-item">
               <a href="#websites-header" class="nav-link">Websites</a>
