--- a/index.html
+++ b/index.html
@@ -102,6 +102,23 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-lg-3 col-sm-12">
+              <div class="card text-center">
+                <div class="card-header">Invitation</div>
+                <div class="card-body">
+                  <a href="img/jjo.png"
+                    ><img src="img/jjo-thumb.png" alt="" class="img-fluid" />
+                    <p class="text-muted">Image</p></a
+                  >
+                  <a
+                    href="./front-end-challenges/jjo-challenge/index.html"
+                    class="btn btn-primary"
+                    >Implementation</a
+                  >
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
