--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <div class="col-lg-3 col-sm-12">
               <div class="card text-center">
-                <div class="card-header">Invitation</div>
+                <div class="card-header">JJO</div>
                 <div class="card-body">
                   <a href="img/jjo.png"
                     ><img src="img/jjo-thumb.png" alt="" class="img-fluid" />
